--- a/history/index.html
+++ b/history/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <script src="app.js" defer></script>
   </head>
   <body>
@@ -13,16 +17,36 @@
         <h3><a href="/homePage/">Horses of</a></h3>
         <h1><a href="/homePage/">Iceland</a></h1>
         <ul>
-          <li><a href="/homePage/">Home</a></li>
-          <li><a href="/breeding/">Breeding</a></li>
           <li>
-            <a href="/gaits/index.html">Gaits</a>
+            <a href="/homePage/" data-en="Home" data-sr="Pocetna">Home</a>
           </li>
-          <li><a href="/history/">History</a></li>
-          <li><a href="/contact/">Contact</a></li>
-          <li><a href="/login/" id="loginremove">Login</a></li>
+          <li>
+            <a href="/breeding/" data-en="Breeding" data-sr="Uzgajanje"
+              >Breeding</a
+            >
+          </li>
+          <li>
+            <a href="/gaits/index.html" data-en="Gaits" data-sr="Hod">Gaits</a>
+          </li>
+          <li>
+            <a href="/history/" data-en="History" data-sr="Istorija">History</a>
+          </li>
+          <li>
+            <a href="/contact/" data-en="Contact" data-sr="Kontakt">Contact</a>
+          </li>
+          <li>
+            <a href="/login/" id="loginremove" data-en="Login" data-sr="Prijava"
+              >Login</a
+            >
+          </li>
         </ul>
-        <h1 class="h11">A History of the Icelandic Horses</h1>
+        <h1
+          class="h11"
+          data-en="A History of the Icelandic Horses"
+          data-sr="Istorija Islandskih konja"
+        >
+          A History of the Icelandic Horses
+        </h1>
       </header>
       <img
         class="img"
@@ -37,7 +61,23 @@
           alt=""
         />
       </div>
-      <p>
+      <p
+        data-en=" Icelandic Horses are one of the oldest breeds of horse in the world.
+      They were brought to Iceland long before any of the European Breeds that
+      we are so familiar with had been established. The Icelandic Horse, along
+      with only a couple of other rare breeds, represent the closest link we
+      have to the first domesticated horses. The Norse horses that first
+      arrived in Iceland with the Vikings were compact, sturdy animals,
+      slightly larger than today’s Icelandic Horses. The horse had helped the
+      Norse people to succeed and prosper by allowing them to travel long
+      distances, carry heavy loads, and plow their fields, at a time when most
+      Europeans were still plowing their fields by hand. The Vikings
+      recognized the value and political power of their horses and gave them a
+      place of great honor in their history and culture. They took them every
+      where they went. So, when the first Vikings set sail to explore Northern
+      oceans, along with them went the strong little horses."
+        data-sr="Islandski konji su jedna od najstarijih rasa konja na svetu. Doneti su na Island mnogo pre nego što su evropske rase koje nam danas dobro poznate bile uspostavljene. Islandski konj, zajedno sa samo nekoliko drugih retkih rasa, predstavlja najbližu povezanost koju imamo sa prvim domestikovanim konjima. Norveški konji koji su prvi stigli na Island sa Vikingima bili su kompaktni, čvrsti životinje, malo veći od današnjih islandskih konja. Konj je pomogao Norvežanima da uspeju i napreduju omogućavajući im da putuju na velike udaljenosti, nose teške terete i ore njihova polja, u vreme kada su većina Evropljana još uvek orali svoja polja ručno. Vikinzi su prepoznali vrednost i političku moć svojih konja i dali im mesto velikog časti u svojoj istoriji i kulturi. Nosili su ih svuda gde su išli. Tako su, kada su prvi Vikinzi krenuli da istražuju severne okeane, sa njima išli i ti jaki mali konji."
+      >
         Icelandic Horses are one of the oldest breeds of horse in the world.
         They were brought to Iceland long before any of the European Breeds that
         we are so familiar with had been established. The Icelandic Horse, along
@@ -61,7 +101,25 @@
           alt=""
         />
       </div>
-      <p>
+      <p
+        data-en=" The domesticated horses in Europe at the time were born gaited, meaning
+      they had four and five gaits. The nomadic people who first domesticated
+      them encouraged both pacing and other flying gaits which could carry
+      them long distances without tiring the horses. So, the horses that came
+      to Iceland were excellent riding horses as well as being capable of hard
+      work. Iceland is not an easy place to make home. There are no trees
+      (actually, these days there are a few). The island is volcanic so,
+      although it provides an unusual abundance of life for it’s northern
+      latitude. The ground is a mass of large grassy hummocks overlaying rock,
+      and does not turn easily into farmland. It is certainly not an ideal
+      setting for the horse. Both horse and people have had to face cold and
+      starvation on more than one occasion in Iceland. As a result, horses and
+      people have become specialized in Icelandic living over the years. The
+      Vikings also used a good number of horse for food, this they still do.
+      The horses that were not top quality were used to supplement their diets
+      since red meat was, and still is, scarce in Iceland."
+        data-sr="Domestikovani konji u Evropi tog vremena su rođeni sa specifičnim hodovima, što znači da su imali četiri i pet hodova. Nomadski ljudi koji su ih prvi domestikovali podsticali su kako hodanje tako i druge leteće hodove koji su im omogućavali da prelaze velike udaljenosti bez umaranja konja. Tako su konji koji su stigli na Island bili izvanredni jahački konji, kao i sposobni za težak rad. Island nije lako mesto za život. Nema mnogo drveća (zapravo, danas ih ima malo). Ostrvo je vulkansko, pa, iako pruža neuobičajeno bogatstvo života za svoju severnu geografski širinu, tlo je masa velikih travnatih uzvišenja preko stene i teško se pretvara u obradivo zemljište. Sigurno nije idealno okruženje za konja. I konj i ljudi su morali da se suoče sa hladnoćom i glađu više od jednom na Islandu. Kao rezultat toga, konji i ljudi su tokom godina postali specijalizovani za život na Islandu. Vikinzi su takođe koristili veliki broj konja za hranu, što i dalje rade. Konji koji nisu bili vrhunskog kvaliteta korišćeni su za dopunu njihove ishrane, budući da je crveno meso bilo, i još uvek je, oskudno na Islandu."
+      >
         The domesticated horses in Europe at the time were born gaited, meaning
         they had four and five gaits. The nomadic people who first domesticated
         them encouraged both pacing and other flying gaits which could carry
@@ -87,7 +145,22 @@
           alt=""
         />
       </div>
-      <p>
+      <p
+        data-en="When Europeans started dying in mass numbers from the plague, Iceland
+      quarantined itself. For many years, nothing and no one came to Iceland.
+      Even today the flow of live animals and plants is forbidden or strictly
+      restricted. One of the results of this quarantine has been that
+      Icelandic Horses have never been cross-bred with other horses. They have
+      remained pure for over a thousand years. Icelandic people are very proud
+      of their horses and Icelandic horses in fact, seem very proud of
+      themselves. The hardships they survived have given a horse that is not
+      afraid to face the world. They are friendly. sure footed, strong, and
+      willing. Their unique gaits make them a joy to ride, and they appear to
+      enjoy the experience as much as we do ! I encourage any and all who love
+      horses to ride an Icelandic. You will never look at horses in quite the
+      same way again."
+        data-sr="Kada su Evropljani počeli masovno da umiru od kuge, Island je uveo karantin. Dugi niz godina, ništa i niko nije dolazio na Island. Čak i danas je protok živih životinja i biljaka zabranjen ili strogo ograničen. Jedan od rezultata ovog karantina je što se islandski konji nikada nisu ukrštali sa drugim konjima. Ostali su čisti više od hiljadu godina. Islanđani su veoma ponosni na svoje konje, a islandski konji zapravo deluju veoma ponosno na sebe. Teškoće koje su preživeli omogućile su im da budu konji koji se ne boje da se suoče sa svetom. Oni su prijateljski nastrojeni, stabilni, jaki i voljni. Njihovi jedinstveni hodovi čine jahanje uživanjem, a čini se da oni sami uživaju u tom iskustvu koliko i mi! Preporučujem svima koji vole konje da jašu islandskog konja. Nikada više nećete gledati konje na isti način."
+      >
         When Europeans started dying in mass numbers from the plague, Iceland
         quarantined itself. For many years, nothing and no one came to Iceland.
         Even today the flow of live animals and plants is forbidden or strictly
@@ -102,6 +175,16 @@
         horses to ride an Icelandic. You will never look at horses in quite the
         same way again.
       </p>
+    </div>
+    <div class="switch">
+      <input
+        id="language-toggle"
+        class="check-toggle check-toggle-round-flat"
+        type="checkbox"
+      />
+      <label for="language-toggle"></label>
+      <span style="margin-bottom: 20px" class="on">SR</span>
+      <span class="off">EN</span>
     </div>
   </body>
 </html>
