--- a/breeding/index.html
+++ b/breeding/index.html
@@ -26,7 +26,11 @@
             <a data-en="Home" data-sr="Pocetna" href="/homePage/">Home</a>
           </li>
           <li>
-            <a href="/breeding/" data-en="Breeding" data-sr="Uzgajanje"
+            <a
+              href="/breeding/"
+              data-en="Breeding"
+              data-sr="Uzgajanje"
+              id="breed"
               >Breeding</a
             >
           </li>
@@ -36,7 +40,7 @@
           <li>
             <a href="/history/" data-en="History" data-sr="Istorija">History</a>
           </li>
-          <li>Contact</li>
+          <li><a href="/contact/">Contact</a></li>
           <li>
             <a href="/login/" id="loginremove" data-en="Login" data-sr="Prijava"
               >Login</a
