--- a/breeding/index.html
+++ b/breeding/index.html
@@ -17,10 +17,13 @@
   </head>
   <body>
     <div class="main">
+      <a href="/homePage/"
+        ><img id="logo" src="/logo-removebg-preview.png" alt=""
+      /></a>
       <i class="fa fa-angle-double-up" aria-hidden="true" id="ikonica"></i>
       <header class="header">
-        <h3><a href="/homePage/">Horses of</a></h3>
-        <h1><a href="/homePage/">Iceland</a></h1>
+        <!-- <h3><a href="/homePage/">Horses of</a></h3>
+        <h1><a href="/homePage/">Iceland</a></h1> -->
         <ul>
           <li>
             <a data-en="Home" data-sr="Pocetna" href="/homePage/">Home</a>
