--- a/gaits/index.html
+++ b/gaits/index.html
@@ -19,8 +19,11 @@
     <div class="main">
       <i class="fa fa-angle-double-up" aria-hidden="true" id="ikonica"></i>
       <header class="header">
-        <h3><a href="/homePage/">Horses of</a></h3>
-        <h1><a href="/homePage/">Iceland</a></h1>
+        <a href="/homePage/"
+          ><img id="logo" src="/logo-removebg-preview.png" alt=""
+        /></a>
+        <!-- <h3><a href="/homePage/">Horses of</a></h3>
+        <h1><a href="/homePage/">Iceland</a></h1> -->
         <ul>
           <li>
             <a href="/homePage/index.html" data-en="Home" data-sr="Pocetna"
