--- a/history/index.html
+++ b/history/index.html
@@ -14,8 +14,11 @@
   <body>
     <div class="main">
       <header>
-        <h3><a href="/homePage/">Horses of</a></h3>
-        <h1><a href="/homePage/">Iceland</a></h1>
+        <a href="/homePage/"
+          ><img id="logo" src="/logo-removebg-preview.png" alt=""
+        /></a>
+        <!-- <h3><a href="/homePage/">Horses of</a></h3> -->
+        <!-- <h1><a href="/homePage/">Iceland</a></h1> -->
         <ul>
           <li>
             <a href="/homePage/" data-en="Home" data-sr="Pocetna">Home</a>
