--- a/homePage/index.html
+++ b/homePage/index.html
@@ -26,8 +26,11 @@
         class="video"
       ></video>
       <header>
-        <h3><a href="/homePage/">Horses of</a></h3>
-        <h1><a href="/homePage/">Iceland</a></h1>
+        <a href="/homePage/"
+          ><img id="logo" src="/logo-removebg-preview.png" alt=""
+        /></a>
+        <!-- <h3><a href="/homePage/">Horses of</a></h3>
+        <h1><a href="/homePage/">Iceland</a></h1> -->
         <ul>
           <li>
             <a href="/homePage/" data-en="Home" data-sr="Pocetna">Home</a>
